@@ -1,0 +1,7 @@
+<!-- wp:template-part {"slug":"header","tagName":"header","className":"site-header sticky-top","layout":{"inherit":true}} /-->
+<!-- wp:group {"tagName":"main","layout":{"inherit":true}} -->
+<main class="wp-block-group">
+    <!-- wp:pattern {"slug":"wecodeart/query-default"} /-->
+</main>
+<!-- /wp:group -->
+<!-- wp:template-part {"slug":"footer","tagName":"footer","className":"site-footer","layout":{"inherit":true}} /-->
