@@ -1,5 +1,8 @@
 v5.5.3
-- Updated - Certain blocks logic to make use of custom palette colors along with default ones - previously was overwriting them.
+- Updated - Certain blocks logic to make use of custom palette colors along with default ones - previously was overwriting them
+- Updated - Starter features.php to about.php + fixed a slug (for some reason it does not loads on WP.org)
+- Updated - core/separator faded style width to 100% for backend overwrite
+- Added - Home.html template
 
 v5.5.2
 - Updated - Header default pattern for WP.org directory
